# Patres-task-test

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: alembic.ini  book_db_management_app.py  bookkeeping_app.py  config_app.py  database.py  dependencies.py  init_db_app.py  librarian_db_management_app.py  main.py  models.py  reader_db_management_app.py  schemas.py
app/alembic/versions/: e2615d975559_initial.py  e66344cec24d_add_genre_field_to_books.py
data/: library_catalog.db
materials/: Тестовое Задание для Стажера Python-Разработчика A .md
src/: Lib.py  app.py  book_db_management.py  bookkeeping.py  classes.py  config.py  db_path.txt  init.py  init_db.py  librarian_db_management.py  reader_db_management.py
tests/: conftest.py  test_api_integration.py  test_auth.py  test_business_logic.py  test_init_db.py
